# disco-rock

./: .gitattributes  .gitignore  .hgignore  LICENSE.txt  README.md
executable/: DiscoRock_linux.sh  config.ini  run_windows.bat
executable/data/: credits.txt  version.txt
executable/data/models/: bear.md5mesh  drink_blue.md5mesh  drink_blue.md5z  drink_blue_glass.md5mesh  drink_blue_glass.md5z  drink_blue_straw.md5mesh  drink_blue_straw.md5z  drink_cola.md5mesh  drink_cola.md5z  drink_mojito.md5mesh  drink_mojito.md5z  drink_mojito_straw.md5mesh  drink_mojito_straw.md5z  drink_sunrise.md5mesh  drink_sunrise.md5z  drink_sunrise_straw.md5mesh  drink_sunrise_straw.md5z  ray.md5mesh  ray.md5z  rock.md5mesh  rock.md5z
executable/data/music/: readme.txt
executable/data/shaders/: border.frag  border.fs  color.frag  color_bar.frag  color_icon.frag  custom.glsl  decal.vert  default_label.fs  drink.frag  drink.vert  drink.vs  fill.frag  fill.fs  fill.vert  fill.vs  floor.frag  floor.fs  floor.vert  floor.vs  floor_plate.frag  floor_plate.fs  floor_plate.vert  floor_plate.vs  glass.frag  glass.fs  glass.vert  glass.vs  glass_cola.frag  glass_cola.fs  global.glsl  particle.fs  particle.vs  ray.frag  ray.fs  ray.vert  rock.frag  rock.fs  rock.vert  rock.vs  shadow.frag  (+6 more)
executable/data/sounds/: achieve.opus  bump.opus  clink.opus  dust.opus  flash.opus  menu.opus  trap.opus  woosh.opus
executable/user/: config.ini
material/: dr_logo_raw.xcf
projects/: android.txt
projects/android/project/: AndroidManifest.xml  ant.properties  build.xml
projects/android/project/jni/: Application.mk
projects/android/project/jni/Main/: Android.mk
projects/android/project/res/values/: ids.xml  strings.xml
projects/android/project/src/at/mausgames/dr/: DiscoRock.java
projects/android/project/src/org/libsdl/app/: SDLActivity.java
projects/cmake/: CMakeLists.txt
projects/codeblocks/: DiscoRock.cbp
projects/netbeans/nbproject/: configurations.xml  project.xml
projects/netbeans/nbproject/private/: configurations.xml
projects/visualstudio/: DiscoRock.sln  manifest.xml
projects/visualstudio/DiscoRock/: DiscoRock.vcxproj  DiscoRock.vcxproj.filters
projects/visualstudio/configuration/: manifest.xml  project.vcxproj  project.vcxproj.filters  version.rc
projects/visualstudio/configuration/windows/: manifest.xml  version.rc
resources/: blue.blend  cola.blend  drink_blue.blend  drink_cola.blend  drink_mojito.blend  drink_sunrise.blend  logo.xcf  mojito.blend  ray.blend  rock.blend  rock_detailed.blend  rock_simple.blend  sunrise.blend
source/: application.cpp  cBackground.cpp  cBackground.h  cBeverage.cpp  cBeverage.h  cCombatText.cpp  cCombatText.h  cFirst.cpp  cFirst.h  cGame.cpp  cGame.h  cInterface.cpp  cInterface.h  cMenu.cpp  cMenu.h  cOnline.cpp  cOnline.h  cPlate.cpp  cPlate.h  cRay.cpp  cRay.h  cRock.cpp  cRock.h  cStage.cpp  cTrap.cpp  cTrap.h  gjKey.h  main.cpp  main.h
tools/: complete_repository.bat  complete_repository.sh
